gmail/style.css
/* ... */
/* ==================================================
 * SPLIT PANE VIEW 
 */

/* Move action bar over app bar */
html.simpl.splitView .G-atb[gh="tm"] {
	position: fixed;
	top: 8px;
	left: 60px;
	z-index: 7;
}
html.simpl.splitView .G-atb[gh="tm"]:before {
	box-shadow: none;
	-webkit-box-shadow: none;
}

/* Expand action bar when search is hidden */
html.simpl.splitView.hideSearch .G-atb[gh="tm"] {
	width: calc(100vw - 200px);
	transition: width 0.2s ease-in 0s;
}

html.simpl.splitView:not(.hideSearch) .G-atb[gh="tm"] {
	width: calc(65% - 100px);
}

/* Hide footer & space usage in preview pane */
html.simpl.splitView .apc,
html.simpl.splitView .apO {
	display: none;
}

/* Reduce left margin on main view */
html.simpl.splitView .bhZ+.bkK {
	margin-left: 12px !important;
}

/* Override padding around main view */
html.simpl.splitView .aeF {
	padding-right: 0px !important;
	margin-bottom: 0px !important;
}
/* Max width conversation */
html.simpl.splitView .AO .aeF > .nH {
	margin: 0px; /*40px auto 0 auto;*/
	max-width: 100%;
}
@media only screen and (min-width: 1450px) {
	html.simpl.splitView .AO .aeF > .nH {
		max-width: 1600px;
		margin: 0 auto;
	}
}

/* Add right margin to inbox tabs */
html.simpl.splitView .aeF .aKh {
	margin-right: 16px;
}

/* No bottom border on app bar */
html.simpl.splitView .aiw {
	box-shadow: none;
	-webkit-box-shadow: none;
}

/* Give view full height */
html.simpl.splitView .apg .age {
	height: calc(100vh - 64px);
}

/* Drop the double border between panes to a single border */
html.simpl.splitView .apj {
	border-right: none;
}
html.simpl.splitView .aph {
	border-bottom: none;
}




/* ==================================================
 * CONVERSATION VIEW 
 */

/* Not sure why, but sometimes this div below the conversation gets 440px bottom padding */
html.simpl .pfiaof {
	padding-bottom: 0px !important;
}

/* Round corners of conversation for themes */
html.simpl .bAn {
	border-radius: 8px;
}

/* Dim print and pop-out icons in conversation view */
html.simpl .bAn .ade {
	opacity: 0.2;
	transition: opacity 0.4s ease-in 0s;
}
html.simpl .bAn .ade:hover {
	opacity: 1;
}




/* ==================================================
 * COMPOSER 
 */

/* A touch more padding above the from field and subject */
html.simpl .dw form.bAs,
html.simpl .aSs .aSt .I5 > form.bAs {
	padding-top: 6px;
}

/* Make full screen composer less wide */
html.simpl .aSs > .aSt {
	width: 900px !important;
	left: calc(50vw - 450px) !important;
}
html.simpl .aSs .aDg > .aDj {
	width: 865px !important;
	left: calc(50vw - 435px) !important;
}

/* Make scrim behind full screen composer darker */
html.simpl .aSs {
	background-color: rgba(0,0,0,.7);
}

/* Move extended compose buttons inline  */
html.simpl .aSs .aDl > .Ur, 
html.simpl .aSs .aDn > .aDl > .Ur, 
html.simpl .aSs .aDi > .aDl > .Ur {
	left: 205px !important;
	bottom: -54px !important;
}
html.simpl .aSs .aZ > .J-Z {
	box-shadow: none !important;
	-webkit-box-shadow: none !important;
}

/* Hide useless buttons in full screen compose and move bar inline */
html.simpl .aSs .aZ .J-Z-I[command^="+undo"],
html.simpl .aSs .aZ .J-Z-I[command^="+redo"],
html.simpl .aSs .aZ .J-Z-I[command^="+bold"],
html.simpl .aSs .aZ .J-Z-I[command^="+italic"],
html.simpl .aSs .aZ .J-Z-I[command^="+underline"],
html.simpl .aSs .btC .oc.gU,
html.simpl .aSs .a8X .wG[command^="docs"],
html.simpl .aSs .a8X .wG[command^="op.money"] {
	display: none !important;
}




/* ================================================== */
/* ADD-ONS RIGHT SIDE PANE */

/* Shrink the add-on chooser to a small FAB when not hovered on */
html.simpl .bAw {
	position: fixed;
	right: 47px !important;
	bottom: 100px !important;
	height: 36px !important; 
	width: 36px !important;
	min-width: 36px !important;
	overflow-y: hidden;
	overflow-x: hidden;
	border-radius: 27px;
	box-shadow: 0 1px 2px 0 rgba(60,64,67,0.3) !important;
	transition: height 0s ease-out 0s;
	transition: width 0s ease-out 0s;
	transition: right 0s ease-out 0s;
}
html.simpl .bAw:hover {
	right: 38px !important;
	width: 54px !important;
	height: 226px !important;
}
html.simpl .bAw div[role="navigation"] {
	border-left: 0px;
	border-radius: 16px;
	background-color: #fff;
	opacity: 0.6;
}
html.simpl.darkTheme .bAw div[role="navigation"] {
	background-color: rgba(51,51,51,.9);
}
html.simpl .bAw:hover div[role="navigation"] {
	background-color: #fff;
	opacity: 1;
}
html.simpl .bAw div[role="navigation"] > div:not(:first-child) {
	display: none;
}
html.simpl .bAw div[role="navigation"] > div:first-child {
	margin: -178px 0px 0px -10px;
	/*opacity: 0.5;*/
}
html.simpl .bAw div[role="navigation"]:hover > div {
	display: block;
	margin: 0px;
	opacity: 1;
}

/* Force the Add-ons overflow button to always be black */
html.simpl .brC-bsf-aT5-aOt > div:last-child .aT5-aOt-I-JX-Jw {
	background-image: url("//www.gstatic.com/images/icons/material/system/2x/more_horiz_black_24dp.png") !important;
}

/* Hide add-on chooser labels which cause add-on chooser to hide */
html.simpl .brC-ays {
	display: none;
}

/* Set the active add-on icon to still have a white background */
html.simpl .aT5-aOt-I-JX-Jw {
	background-color: #fff !important;
}

/* Move Add-ons chooser over when Add-ons pane is open */
html.simpl.addOnsPane .bAw {
	right: 347px !important;
}
html.simpl.addOnsPane .bAw:hover {
	right: 338px !important;
}

/* Move Add-ons chooser over when Right side chat is enabled */
html.simpl.rhsChat:not(.addOnsPane) .bAw {
	right: 216px !important;
}
html.simpl.rhsChat:not(.addOnsPane) .bAw:hover {
	right: 205px !important;
}

/* Move the compose button over when the add on pane is open */
html.simpl.addOnsPane .z0 {
	left: calc(100vw - 392px);
}

/* Hide the hide button in the add-on chooser */
html.simpl .bAw .brC-dA-I-Jw {
	display: none !important;
}

/* Hide the about button in the add-on chooser */
html.simpl .bAw .brC-by0-P6-I {
	display: none;
}

/* Hide the separator */
html.simpl .bAw div[role="separator"] {
	display: none;
}
/* ... */

